# jpipe-runner

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  setup.py  stdeb.cfg
.github/workflows/: ci.yml  demo-poetry.yml  demo-vanilla.yml  release.yml
Formula/: homebrew_formula_gui_template.rb  homebrew_formula_template.rb
docs/: ACTION.md  API.md  BUILD_DOCS.md  CONTRIBUTING.md  PACKAGING_RELEASE.md  TROUBLESHOOTING.md  USAGE.md
docs/python_docs/source/: conf.py  index.rst  jpipe_runner.framework.decorators.rst  jpipe_runner.framework.rst  jpipe_runner.rst  modules.rst
examples/libraries/: notebook.py  slides.py
examples/models/: 01_slides.json  02_quality_full.jd.json
mermaid/: README.md  project_architecture.mmd  release_pipeline_workflow.mmd
script/: build-deb-gui.sh  build-deb.sh  generate_formula.sh  generate_formula_resources.sh  publish-ppa.sh  publish_ubuntu.sh  test_generate_formula.sh
script/action/: build_comment.sh  commit_diagram.sh  install_jpipe_runner.sh  run_jpipe.sh
src/jpipe_runner/: GraphWorkflowVisualizer.py  __init__.py  jpipe.py  runner.py  runtime.py  utils.py
src/jpipe_runner/framework/: context.py  decorators.py  engine.py  logger.py  validators.py
src/jpipe_runner/framework/decorators/: contribution_decorator.py  jpipe_decorator.py  skip_decorator.py
tests/e2e/: test_circular_dependency_e2e.py  test_complex_success_e2e.py  test_exception_handling_e2e.py  test_missing_consumer_e2e.py  test_missing_producer_e2e.py  test_self_dependency_e2e.py  test_simple_success_e2e.py  test_skip_scenario_e2e.py
tests/e2e/resources/circular_dependency/: circular.json  circular.py
tests/e2e/resources/complex_success/: config.yaml  data_pipeline.json  data_pipeline.py
tests/e2e/resources/complex_success/data/: event_calendar.csv  faq_document.txt  fleet_info.json  leader_commitments.txt  press_release.txt  schedule_plan.txt  social_posts.json  speakers_list.csv  staff_roster.csv  testimonial_videos_list.txt
tests/e2e/resources/exception_handling/: config_invalid_denominator.yaml  config_valid_denominator.yaml  error_prone.json  error_prone.py
tests/e2e/resources/missing_consumer/: math_operation.json  math_operation.py
tests/e2e/resources/missing_producer/: config.yaml  string_operation.json  string_operation.py
tests/e2e/resources/self_dependency/: config.yaml  self_dependency.json  self_dependency.py
tests/e2e/resources/simple_success/: config.yaml  file_validation.json  file_validation.py
tests/e2e/resources/skip_scenario/: conditional.json  conditional.py  config.yaml
tests/unit/: test_context.py  test_decorators.py  test_engine.py  test_normalize_structure.py  test_validators.py
tests/unit/resources/input_normalisation/: config_complex.yaml  config_list.yaml  config_mixed.yaml  config_nested.yaml  config_simple.yaml
