[tool.poetry]
name = "jpipe-runner"
version = "2.0.0b12"
description = "A Justification Runner designed for jPipe."
authors = [
    "Jason Lyu <xjasonlyu@gmail.com>",
    "Sébastien Mosser <mossers@mcmaster.ca>",
    "Baptiste Lacroix <contact@baptiste-lacroix.fr>"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jpipe-mcscert/jpipe-runner"
keywords = ["justification", "pipeline", "ML", "AI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "jpipe_runner", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
networkx = "^3.4.2"
pygraphviz = "^1.11"
matplotlib = "^3.10.3"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
jpipe-runner = "jpipe_runner.runner:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
