[tool.poetry]
name = "jpipe-runner"
version = "2.0.0"
description = "A Justification Runner designed for jPipe."
authors = [
    "Jason Lyu <xjasonlyu@gmail.com>",
    "Sébastien Mosser <mossers@mcmaster.ca>"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jpipe-mcscert/jpipe-runner"
keywords = ["justification", "pipeline", "ML", "AI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "jpipe_runner", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"
networkx = "^3.4.2"
termcolor = "^2.5.0"
pygraphviz = "^1.11"
matplotlib = "^3.10.3"
pyyaml = "^6.0.2"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "myst-parser"]

[tool.poetry.scripts]
jpipe-runner = "jpipe_runner.runner:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
